tests/ui/control_label_mismatch.stderr
error[E0080]: evaluation panicked: control label mismatch
 --> src/global.rs
  |
  |         validate_control_label_contract::<LABEL, K>();
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `<hibana::global::Message<hibana::global::LabelMarker<40>, hibana::substrate::cap::GenericCapToken<WrongLabelKind>, WrongLabelKind> as hibana::global::MessageControlSpec>::CONTROL` failed inside this call
  |
note: inside `hibana::global::validate_control_label_contract::<40, WrongLabelKind>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/global.rs
  |
  |         panic!("control label mismatch");
  |         -------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/global.rs
  |
  |             let path = match <M as MessageControlSpec>::CONTROL {
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: erroneous constant encountered
 --> src/global.rs
  |
  | /     const {
  | |         crate::global::validate_sendable_message::<M>();
  | |         if <M as MessageControlSpec>::IS_CONTROL {
  | |             let is_self_send = <<From as steps::RoleEq<To>>::Output as steps::Bool>::VALUE;
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<40>, GenericCapToken<WrongLabelKind>, WrongLabelKind>, 0>`
  --> tests/ui/control_label_mismatch.rs:45:13
   |
45 |       let _ = g::send::<
   |  _____________^
46 | |         g::Role<0>,
47 | |         g::Role<1>,
48 | |         g::Msg<40, GenericCapToken<WrongLabelKind>, WrongLabelKind>,
49 | |         0,
50 | |     >();
   | |_______^
